force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/Apttus_Config2__ConfigCustomClasses__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to register.custom classes that Implement Global interfaces exposed by Apttus for customization.</description>
    <label>Config Custom Classes</label>
</CustomObject>