force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ActionCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionCallbackClass__c</fullName>
    <description>The Action callback class name. The class should implement the CustomClass.IActionCallback3 interface.</description>
    <inlineHelpText>The Action callback class name. The class should implement the CustomClass.IActionCallback3 interface.</inlineHelpText>
    <label>Action Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>