force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ActionInvokerCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionInvokerCallbackClass__c</fullName>
    <description>The action invoker callback class name. The class should implement the CustomClass.IActionInvokerCallback interface.</description>
    <inlineHelpText>The action invoker callback class name. The class should implement the CustomClass.IActionInvokerCallback interface.</inlineHelpText>
    <label>Action Invoker Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>