force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ActionParamsCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionParamsCallbackClass__c</fullName>
    <description>The action parameters callback class name. The class should implement the CustomClass.IActionParamsCallback interface.</description>
    <inlineHelpText>The action parameters callback class name. The class should implement the CustomClass.IActionParamsCallback interface.</inlineHelpText>
    <label>Action Params Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>