force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__AdjustmentLineItemCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentLineItemCallbackClass__c</fullName>
    <description>The adjustment line item callback class name. The class should implement the CustomClass.IAdjustmentLineItemCallback interface.</description>
    <inlineHelpText>The adjustment line item callback class name. The class should implement the CustomClass.IAdjustmentLineItemCallback interface.</inlineHelpText>
    <label>Adjustment Line Item Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>