force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__AdjustmentSpreadCallback__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentSpreadCallback__c</fullName>
    <description>The adjustment spread callback class name. The class should implement the CustomClass.IAdjustmentSpreadCallback interface</description>
    <inlineHelpText>The adjustment spread callback class name. The class should implement the CustomClass.IAdjustmentSpreadCallback interface</inlineHelpText>
    <label>Adjustment Spread Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>