force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__AdvancedApprovalCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdvancedApprovalCallbackClass__c</fullName>
    <description>The advanced approval callback class name. The class should implement the CustomClass.IAdvancedApprovalCallback interface.</description>
    <inlineHelpText>The advanced approval callback class name. The class should implement the CustomClass.IAdvancedApprovalCallback interface.</inlineHelpText>
    <label>Advanced Approval Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>