force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__AssetRenewalCustomCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetRenewalCustomCallbackClass__c</fullName>
    <description>The asset renewal custom callback class name. The class should implement the CustomClass.IAssetRenewalCustomCallback interface.</description>
    <inlineHelpText>The asset renewal custom callback class name. The class should implement the CustomClass.IAssetRenewalCustomCallback interface.</inlineHelpText>
    <label>Asset Renewal Custom Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>