force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__BulkLoyaltyPointCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BulkLoyaltyPointCallbackClass__c</fullName>
    <description>The bulk loyalty point callback class name. The class should implement the CustomClass.IBulkLoyaltyPointCallback interface.</description>
    <inlineHelpText>The bulk loyalty point callback class name. The class should implement the CustomClass.IBulkLoyaltyPointCallback interface.</inlineHelpText>
    <label>Bulk Loyalty Point Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>