force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__CartApprovalCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartApprovalCallbackClass__c</fullName>
    <description>The cart approval callback class name. The class should implement the CustomClass.ICartApprovalCallback2 interface.</description>
    <inlineHelpText>The cart approval callback class name. The class should implement the CustomClass.ICartApprovalCallback2 interface.</inlineHelpText>
    <label>Cart Approval Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>