force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__DealOptimizerCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DealOptimizerCallbackClass__c</fullName>
    <description>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback2 interface.</description>
    <inlineHelpText>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback2 interface.</inlineHelpText>
    <label>Deal Optimizer Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>