force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__FormulaCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FormulaCallbackClass__c</fullName>
    <description>The formula callback class name. The class should implement the CustomClass.IFormulaCallback interface.</description>
    <inlineHelpText>The formula callback class name. The class should implement the CustomClass.IFormulaCallback interface.</inlineHelpText>
    <label>Formula Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>