force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__LoyaltyCycleCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyCycleCallbackClass__c</fullName>
    <description>The loyalty cycle callback class name. The class should implement the CustomClass.ILoyaltyCycleCallback interface.</description>
    <inlineHelpText>The loyalty cycle callback class name. The class should implement the CustomClass.ILoyaltyCycleCallback interface.</inlineHelpText>
    <label>Loyalty Cycle Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>