force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__LoyaltyPointCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyPointCallbackClass__c</fullName>
    <description>The loyalty point callback class name. The class should implement the CustomClass.ILoyaltyPointCallback interface.</description>
    <inlineHelpText>The loyalty point callback class name. The class should implement the CustomClass.ILoyaltyPointCallback interface.</inlineHelpText>
    <label>Loyalty Point Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>