force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__MetadataCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MetadataCallbackClass__c</fullName>
    <description>The metadata callback class name. The class should implement the CustomClass.IMetadataCallback interface.</description>
    <inlineHelpText>The metadata callback class name. The class should implement the CustomClass.IMetadataCallback interface.</inlineHelpText>
    <label>Metadata Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>