force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__OptionFilterCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionFilterCallbackClass__c</fullName>
    <description>The Option filter callback class name. The class should implement the CustomClass.IOptionFilterCallback interface.</description>
    <inlineHelpText>The Option filter callback class name. The class should implement the CustomClass.IOptionFilterCallback interface.</inlineHelpText>
    <label>Option Filter Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>