force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__PricingCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingCallbackClass__c</fullName>
    <description>The pricing callback class name. The class should implement the CustomClass.IPricingCallback2 interface.</description>
    <inlineHelpText>The pricing callback class name. The class should implement the CustomClass.IPricingCallback2 interface.</inlineHelpText>
    <label>Pricing Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>