force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__PricingExtensionCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingExtensionCallbackClass__c</fullName>
    <description>The pricing extension callback class name. The class should implement the CustomClass.IPricingExtensionCallback interface.</description>
    <inlineHelpText>The pricing extension callback class name. The class should implement the CustomClass.IPricingExtensionCallback interface.</inlineHelpText>
    <label>Pricing Extension Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>