force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ProductAttributeCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeCallbackClass__c</fullName>
    <description>The product attribute callback class name. The class should implement the CustomClass.IProductAttributeCallback interface.</description>
    <inlineHelpText>The product attribute callback class name. The class should implement the CustomClass.IProductAttributeCallback interface.</inlineHelpText>
    <label>Product Attribute Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>