force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ProductFilterCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFilterCallbackClass__c</fullName>
    <description>The product filter callback class name. The class should implement the CustomClass.IProductFilterCallback interface.</description>
    <inlineHelpText>The product filter callback class name. The class should implement the CustomClass.IProductFilterCallback interface.</inlineHelpText>
    <label>Product Filter Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>