force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__RecommendationCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RecommendationCallbackClass__c</fullName>
    <description>The recommendation callback class name. The class should implement the CustomClass.IRecommendationCallback interface.</description>
    <inlineHelpText>The recommendation callback class name. The class should implement the CustomClass.IRecommendationCallback interface.</inlineHelpText>
    <label>Recommendation Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>