force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__RelatedPricingCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedPricingCallbackClass__c</fullName>
    <description>The related pricing callback class name. The class should implement the CustomClass.IRelatedPricingCallback interface.</description>
    <inlineHelpText>The related pricing callback class name. The class should implement the CustomClass.IRelatedPricingCallback interface.</inlineHelpText>
    <label>Related Pricing Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>