force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__RevalidationCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RevalidationCallbackClass__c</fullName>
    <description>The Revalidation callback class name. The class should implement the CustomClass.IRevalidationCallback interface.</description>
    <inlineHelpText>The Revalidation callback class name. The class should implement the CustomClass.IRevalidationCallback interface.</inlineHelpText>
    <label>Revalidation Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>