force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ShippingCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShippingCallbackClass__c</fullName>
    <description>The shipping callback class name. The class should implement the CustomClass.IShippingCallback interface.</description>
    <inlineHelpText>The shipping callback class name. The class should implement the CustomClass.IShippingCallback interface.</inlineHelpText>
    <label>Shipping Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>