force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__TaxCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaxCallbackClass__c</fullName>
    <description>The tax callback class name. The class should implement the CustomClass.ITaxCallback interface.</description>
    <inlineHelpText>The tax callback class name. The class should implement the CustomClass.ITaxCallback interface.</inlineHelpText>
    <label>Tax Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>