force-app/main/default/objects/Apttus_Config2__ConfigCustomClasses__c/fields/Apttus_Config2__ValidationCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValidationCallbackClass__c</fullName>
    <description>The validation callback class name. The class should implement the CustomClass.IValidationCallback interface.</description>
    <inlineHelpText>The validation callback class name. The class should implement the CustomClass.IValidationCallback interface.</inlineHelpText>
    <label>Validation Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>